# goit-softwere-hw-08

./: .env.example  connect.py  consumer.py  producer.py  pyproject.toml  search.py  seed_quotes.py
